cmake_minimum_required(VERSION 2.8)
project( tracking )

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")

aux_source_directory(./src/ SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})

include_directories( include/common )
include_directories( include/)
include_directories( 3rdparty/tim-vx/include/VX )
include_directories( 3rdparty/tim-vx/include/CL )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )

target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/lib/libtengine-lite.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libNNArchPerf.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libArchModelSw.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libVSC.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libOpenVXC.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libvdtproxy.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libOpenVX.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libCLC.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libEmulator.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libOpenVXU.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libGAL.so)
target_link_libraries( tracking ${OpenCV_LIBS} /home/soc123/tengine-ncnn-tracking-kalman-x86/3rdparty/tim-vx/lib/x86_64/libOpenVX.so.1)

